# aoc

./: aoc.opam  dune-project
lib/: aoc.ml  aoc.mli  dune  four.ml  one.ml  three.ml  two.ml
test/: dune  one_input.ml  t_all.ml  t_aoc.ml  t_four.ml  t_one.ml  t_three.ml  t_two.ml  three_input.ml  two_input.ml  utils.ml
